--- a/IarProject/BuckBoostDriver/BuckBoostDirver/BuckBoostDirver.ioc
+++ b/IarProject/BuckBoostDriver/BuckBoostDirver/BuckBoostDirver.ioc
@@ -1,8 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
-#Wed May 20 13:00:34 YEKT 2015
+#Wed May 27 15:28:58 YEKT 2015
 ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.IPParameters=Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,master,NbrOfConversionFlag
-ADC1.NbrOfConversionFlag=1
+ADC1.IPParameters=Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,master
 ADC1.Rank-6\#ChannelRegularConversion=1
 ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
 ADC1.master=1
@@ -46,15 +45,27 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA8.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultPP
+PA8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PA8.GPIO_Speed=GPIO_SPEED_LOW
 PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultPP
+PA9.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PA9.GPIO_Speed=GPIO_SPEED_LOW
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
 PB1.Locked=true
 PB1.Signal=ADCx_IN9
+PB13.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultPP
+PB13.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PB13.GPIO_Speed=GPIO_SPEED_LOW
 PB13.Locked=true
 PB13.Mode=PWM Generation1 CH1 CH1N
 PB13.Signal=TIM1_CH1N
+PB14.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultPP
+PB14.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PB14.GPIO_Speed=GPIO_SPEED_LOW
 PB14.Locked=true
 PB14.Mode=PWM Generation2 CH2 CH2N
 PB14.Signal=TIM1_CH2N
@@ -107,7 +118,7 @@ RCC.FCLKCortexFreq_Value=24000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=24000000
 RCC.HSEDivPLL=RCC_HSE_PREDIV_DIV2
-RCC.IPParameters=HCLKFreq_Value,SYSCLKFreq_VALUE,PLLCLKFreq_Value,FamilyName,PLLMCOFreq_Value,SYSCLKSource,FCLKCortexFreq_Value,APB2Freq_Value,APB2TimFreq_Value,PLLMUL,MCOFreq_Value,VCOOutput2Freq_Value,HSEDivPLL,ADCFreqValue,PLLSource,APB1TimFreq_Value,APB1Freq_Value,AHBFreq_Value,TimSysFreq_Value
+RCC.IPParameters=HCLKFreq_Value,SYSCLKFreq_VALUE,FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKSource,FCLKCortexFreq_Value,APB2Freq_Value,APB2TimFreq_Value,PLLMUL,MCOFreq_Value,VCOOutput2Freq_Value,HSEDivPLL,ADCFreqValue,PLLSource,APB1Freq_Value,APB1TimFreq_Value,AHBFreq_Value,TimSysFreq_Value
 RCC.MCOFreq_Value=24000000
 RCC.PLLCLKFreq_Value=24000000
 RCC.PLLMCOFreq_Value=12000000
@@ -123,8 +134,12 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM1_CH2.ConfNb=1
+TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_ENABLE
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N
+TIM1.DeadTime=1
+TIM1.IPParameters=Period,DeadTime,Channel-PWM Generation2 CH2 CH2N,AutomaticOutput,Pulse-PWM Generation1 CH1 CH1N
+TIM1.Period=256
+TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=128
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
 VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
