--- a/CubeMXProject/STM32F334.ioc
+++ b/CubeMXProject/STM32F334.ioc
@@ -1,22 +1,28 @@
 #MicroXplorer Configuration settings - do not modify
-#Wed May 06 17:42:24 YEKT 2015
-ADC1.IPParameters=NbrOfConversionFlag
+#Wed Jun 10 17:32:27 YEKT 2015
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,SubFamily,Offset-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
+ADC1.Offset-0\#ChannelRegularConversion=0
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SubFamily=STM32F334x8
+ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SingleDiff-0\#ChannelRegularConversion,NbrOfConversionFlag
-ADC2.NbrOfConversionFlag=1
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SingleDiff-0\#ChannelRegularConversion
 ADC2.Offset-0\#ChannelRegularConversion=0
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC2.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
-COMP2.IPParameters=InvertingInput-INM_DAC1OUT1
-COMP2.InvertingInput-INM_DAC1OUT1=COMP_INVERTINGINPUT_DAC1
-COMP4.IPParameters=InvertingInput-INM_DAC1OUT2
-COMP4.InvertingInput-INM_DAC1OUT2=COMP_INVERTINGINPUT_DAC2
-COMP6.IPParameters=InvertingInput-INM_DAC2OUT1
-COMP6.InvertingInput-INM_DAC2OUT1=COMP_INVERTINGINPUT_DAC3
-File.Version=4
+File.Version=5
+HRTIM1.DMARequests_Semaphore-MasterTimer=ATLEASTONEDMAREQ
+HRTIM1.DMARequests_Semaphore-Output_TA1TA2=ATLEASTONEDMAREQ
+HRTIM1.DMARequests_Semaphore-Output_TB1TB2=ATLEASTONEDMAREQ
+HRTIM1.DMARequests_Semaphore-Output_TC1TC2=ATLEASTONEDMAREQ
+HRTIM1.DMARequests_Semaphore-Output_TD1TD2=ATLEASTONEDMAREQ
+HRTIM1.IPParameters=DMARequests_Semaphore-Output_TB1TB2,DMARequests_Semaphore-Output_TD1TD2,DMARequests_Semaphore-MasterTimer,DMARequests_Semaphore-Output_TA1TA2,DMARequests_Semaphore-Output_TC1TC2
 KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
@@ -69,9 +75,11 @@ Mcu.Pin8=PA1
 Mcu.Pin9=PA2
 Mcu.PinsNb=34
 Mcu.UserName=STM32F334R8Tx
-NVIC.NonMaskableInt_IRQn=true\:0\:0
+MxCube.Version=4.7.1
+MxDb.Version=DB.4.0.71
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
-NVIC.SysTick_IRQn=true\:0\:0
+NVIC.SysTick_IRQn=true\:0\:0\:true
 PA0.Locked=true
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
@@ -117,23 +125,22 @@ PB2.Signal=ADC2_IN12
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
 PC0.Signal=S_TIM1_CH1
-PC1.Mode=IN7-Single-Ended
-PC1.Signal=ADC2_IN7
+PC1.Signal=ADCx_IN7
 PC13.Mode=PWM Generation1 CH1 CH1N
 PC13.Signal=TIM1_CH1N
 PC2.Signal=S_TIM1_CH3
-PC3.Mode=IN9-Single-Ended
-PC3.Signal=ADC2_IN9
+PC3.Signal=ADCx_IN9
 PC4.Mode=Asynchronous
 PC4.Signal=USART1_TX
 PC5.Mode=IN11-Differential
 PC5.Signal=ADC2_IN11
+PCC.Checker=false
 PCC.Family=STM32F3
 PCC.MCU=STM32F334R(4-6-8)Tx
-PCC.MXVersion=4.3.0
+PCC.MXVersion=4.7.1
 PCC.PartNumber=STM32F334R8Tx
 PCC.Seq0=0
-PCC.SubFamily=STM32F3x4
+PCC.SubFamily=STM32F334
 PCC.Temperature=25
 PCC.Vdd=3.6
 PF0\ /\ OSC_IN.Locked=true
@@ -142,19 +149,50 @@ PF0\ /\ OSC_IN.Signal=RCC_OSC_IN
 PF1\ /\ OSC_OUT.Locked=true
 PF1\ /\ OSC_OUT.Mode=HSE-External-Oscillator
 PF1\ /\ OSC_OUT.Signal=RCC_OSC_OUT
+RCC.ADC12outputFreq_Value=72000000
+RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.CortexFreq_Value=9000000
 RCC.EnbaleCSS=true
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=72000000
+RCC.HRTIM1Freq_Value=144000000
 RCC.HRTIMSelection=RCC_HRTIM1CLK_PLLCLK
+RCC.HSEPLLFreq_Value=8000000
 RCC.HSE_VALUE=8000000
+RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
-RCC.IPParameters=,FamilyName,LSE_VALUE,TIM1Selection,SYSCLKSource,HRTIMSelection,EnbaleCSS,APB1CLKDivider,HSE_VALUE,PLLMUL,HSI_VALUE,PLLSource,LSI_VALUE
+RCC.I2C1Freq_Value=8000000
+RCC.IPParameters=HCLKFreq_Value,SYSCLKFreq_VALUE,PLLCLKFreq_Value,FamilyName,RTCHSEDivFreq_Value,SYSCLKSourceVirtual,TIM1Freq_Value,RTCFreq_Value,TIM1Selection,LSE_VALUE,PLLMCOFreq_Value,SYSCLKSource,HRTIMSelection,EnbaleCSS,FCLKCortexFreq_Value,CortexFreq_Value,APB1CLKDivider,HRTIM1Freq_Value,PLLSourceVirtual,APB2Freq_Value,TIM2Freq_Value,APB2TimFreq_Value,PLLMUL,HSE_VALUE,HSEPLLFreq_Value,MCOFreq_Value,VCOOutput2Freq_Value,USART2Freq_Value,HSI_VALUE,PLLSource,USART1Freq_Value,APB1TimFreq_Value,ADC12outputFreq_Value,APB1Freq_Value,HSIPLLFreq_Value,I2C1Freq_Value,AHBFreq_Value,LSI_VALUE,USART3Freq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=72000000
 RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLSource=RCC_PLLSOURCE_HSE
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.RTCFreq_Value=40000
+RCC.RTCHSEDivFreq_Value=250000
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIM1Freq_Value=144000000
 RCC.TIM1Selection=RCC_TIM1CLK_PLLCLK
+RCC.TIM2Freq_Value=72000000
+RCC.USART1Freq_Value=36000000
+RCC.USART2Freq_Value=36000000
+RCC.USART3Freq_Value=36000000
+RCC.VCOOutput2Freq_Value=8000000
+SH.ADCx_IN7.0=ADC2_IN7,IN7-Single-Ended
+SH.ADCx_IN7.ConfNb=1
+SH.ADCx_IN9.0=ADC2_IN9,IN9-Single-Ended
+SH.ADCx_IN9.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
